--- a/game.html
+++ b/game.html
@@ -2,9 +2,22 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>PONG</title>
+        <style>
+            body {
+                margin: 20px;
+                background-color: rgb(50, 50, 50);
+            }
+            .output {
+                border-style: solid;
+                border-width: 2px;
+                border-color: blue;
+                padding: 5px;
+            }
+        </style>
     </head>
     <body>
+        <h2 style="color: white">PONGs</h2>
         <canvas id="gameCanvas" width="800 " height="600"></canvas>
         <p id="info">Yay Fun!</p>
         <p id="moreinfo">More Fun!!</p>
